# nf-mapper

./: .cspell.json  .gitignore  .mega-linter.yml  CHANGELOG.md  CODEBASE_NOTES.md  CODESPACES.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yml  checkstyle.xml  pyproject.toml
.devcontainer/: README.md  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  codespaces.yml  copilot-auto-fix.yml  docker-publish.yml  lint.yml  update-readme.yml  update-snapshots.yml
nf-mapper/: pom.xml
nf-mapper-java/: pom.xml
nf_mapper/: __init__.py  cli.py  mermaid.py  parser.py
snapshots/: complex_workflow.md  complex_workflow_metro_default.md  if_workflow.md  if_workflow_conditional.md  if_workflow_conditional_conditional.md  if_workflow_default.md  main_file_refs.md  main_file_refs_conditional.md  main_file_refs_metro.md  minimal_process.md  nf_core_fastqc_module.md  nf_core_fastqc_module_conditional.md  nf_core_fetchngs_sra.md  nf_core_fetchngs_sra_conditional.md  nf_core_fetchngs_sra_default.md  quantms_style.md  scenario_channel_nodes.md  scenario_cherry_pick.md  scenario_merge.md  scenario_multi_cherry_pick.md  scenario_workflow_call_branches.md  scenario_workflow_call_branches_conditional.md  scenario_workflow_call_branches_default.md  simple_workflow.md  simple_workflow_default.md
tests/: test_cli.py  test_mermaid.py  test_parser.py  test_snapshots.py
tests/fixtures/: complex_workflow.nf  multi_arg_workflow.nf
tests/snapshots/: complex_workflow.md  minimal_process.md  nf_core_fastqc_module.md  (+4 more)
(+38 files in other folders)
