[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nf-mapper"
version = "0.1.0"
description = "Convert Nextflow pipelines to Mermaid flowchart diagrams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["nextflow", "mermaid", "bioinformatics", "pipeline", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "groovy-parser>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
nf-mapper = "nf_mapper.cli:main"

[project.urls]
Homepage = "https://github.com/Skitionek/nf-mapper"
Repository = "https://github.com/Skitionek/nf-mapper"
Issues = "https://github.com/Skitionek/nf-mapper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nf_mapper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
